@@ -3,7 +3,7 @@ export const guilds = [ process.env.GUILD_FLOODED_AREA, process.env.GUILD_SPACED
 
 
 import Discord from "discord.js";
-import { emojis, colours, strip } from "@magicalbunny31/awesome-utility-stuff";
+import { emojis, colours, strip, sum } from "@magicalbunny31/awesome-utility-stuff";
 
 /**
  * @param {Discord.ChatInputCommandInteraction} interaction
@@ -166,6 +166,11 @@ export default async (interaction, firestore) => {
          )
             .filter(Boolean); // some sellerIds may have no personal items: remove them from the list
 
+         const userItemsValue = sum(
+            userItems.map(item => item[`bought-for`]),
+            0
+         );
+
 
          // embeds
          embeds[0]
@@ -193,7 +198,10 @@ export default async (interaction, firestore) => {
                      )
                      .join(`\n`)
                   : null
-            );
+            )
+            .setFooter({
+               text: `💰 Total value: ${userItemsValue.toLocaleString()} ${userItemsValue === 1 ? `coin` : `coins`}`
+            });
 
 
          // components
